[package]
name = "polymarket-rtds"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "crypto_price_monitor"
path = "examples/crypto_price_monitor.rs"
